--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>GridKalkulator</title>
-  <base href="https://mladenpotrebic.github.io/gridulator/">
-
+  <base href="/gridulator/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.3353e1ad1a3a139b0db9.css"></head>
+</head>
 <body>
   <app></app>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="polyfills.24878f0fc306c9c3ca3c.js"></script><script type="text/javascript" src="main.f2ee2cb717e5303aac3e.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
